lista 3 -> HATEOAS added
